--- a/app/javascript/packs/application.js.erb
+++ b/app/javascript/packs/application.js.erb
@@ -7,4 +7,6 @@ require("@rails/ujs").start()
 require("turbolinks").start()
 require("@rails/activestorage").start()
 require("channels")
+import '../stylesheets/application'
+import './bootstrap_custom.js'
 import "<%= File.join(Gem.loaded_specs['bootstrap-sass'].full_gem_path, 'assets', 'javascripts', 'bootstrap-sprockets') %>"
